Updated topic names to allow laser unit tests to pass Was failing on a double / in the topic name

--- a/flatland_plugins/test/laser_tests/intensity_test/robot.model.yaml
+++ b/flatland_plugins/test/laser_tests/intensity_test/robot.model.yaml
@@ -20,7 +20,7 @@ plugins:
 
   - type: Laser
     name: laser_center
-    topic: /scan_center
+    topic: scan_center
     frame: center_laser
     body: base_link
     origin: [0, 0, 0]
